--- a/assets/old/docs.html
+++ b/assets/old/docs.html
@@ -1980,7 +1980,7 @@
 					<h1 id="labels">Labels</h1>
 				</div>
 				<p class="lead"></p>
-				<h3>Example</h3>
+				<h3>Usage</h3>
 				<div class="bs-example">
 					<h1>Example heading <span class="label label-default">New</span></h1>
 					<h2>Example heading <span class="label label-default">New</span></h2>
