--- a/assets/old/index.html
+++ b/assets/old/index.html
@@ -128,7 +128,7 @@
 				<pre>$path - string to add to the site url </pre>
 				<h2>Return value</h2>
 				<pre>String (ex. http://example.com/) </pre>
-				<h3>Example</h3>
+				<h3>Usage</h3>
 				<p>Example #1 site_url() example</p>
 				<pre>// print the site url http://example.com/ print site_url(); </pre>
 				<p>Example #2 site_url($path) example</p>
@@ -139,7 +139,7 @@
 				<pre>get_content_by_id(int $id) </pre>
 			 
 				<pre> Array or False </pre>
-				<h3>Example</h3>
+				<h3>Usage</h3>
 				<pre>//get a content item $content = get_content_by_id(3); print $content['title'];  print_r($content); Array (     [id] =&gt; 8     [updated_on] =&gt; 2013-09-17 11:25:10     [created_on] =&gt; 2013-09-17 11:25:10     [expires_on] =&gt;      [created_by] =&gt; 1     [edited_by] =&gt; 1     [content_type] =&gt; page     [url] =&gt; my-title-20130917112510     [content_filename] =&gt;      [title] =&gt; My title     [parent] =&gt; 0     [description] =&gt;      [content_meta_title] =&gt;      [content_meta_keywords] =&gt;      [position] =&gt; 3     [content] =&gt; My content body     [is_active] =&gt; y     [is_home] =&gt; n     [is_pinged] =&gt; n     [is_shop] =&gt; n     [is_deleted] =&gt; n     [draft_of] =&gt;      [require_login] =&gt; n     [subtype] =&gt;      [subtype_value] =&gt;      [original_link] =&gt;      [layout_file] =&gt;      [layout_name] =&gt;      [layout_style] =&gt;      [active_site_template] =&gt;      [session_id] =&gt;  )  </pre>
 				 
 			</div>
@@ -148,7 +148,7 @@
 					<h1 id="labels">Labels</h1>
 				</div>
 				<p class="lead"></p>
-				<h3>Example</h3>
+				<h3>Usage</h3>
 				<div class="bs-example">
 					<h1>Example heading <span class="label label-default">New</span></h1>
 					<h2>Example heading <span class="label label-default">New</span></h2>
@@ -179,7 +179,7 @@
 					<h1 id="labels">Labels</h1>
 				</div>
 				<p class="lead"></p>
-				<h3>Example</h3>
+				<h3>Usage</h3>
 				<div class="bs-example">
 					<h1>Example heading <span class="label label-default">New</span></h1>
 					<h2>Example heading <span class="label label-default">New</span></h2>
